# slides-jug-summer-camp-24

./: .gitignore  .mise.toml  Cargo.toml  Dioxus.toml  Original_Ferris.svg.br  README.md  Rust_programming_language_black_logo.svg.br  Rustacean-flat-gesture.svg.br  Rustacean-flat-happy.svg.br  dioxus.png.br  discord.svg.br  duke.png.br  index.html  jugsummercamp-footer.png.br  jugsummercamp-header.png.br  jugsummercamp-logo.png.br  jugsummercamp.css  livecode.css  main.css  pico.colors.min.css.br  print.css  stencil.png.br  web-components.svg.br
.github/workflows/: cd.yaml
assets/: gdg-tls.css  jugsummercamp-logo-144.png.br  jugsummercamp.css  jugsummercamp.png.br  livecode.css  main.css  pico.min.css.br  print.css
assets/dioxus/: slides-jug-summer-camp-24.js  slides-jug-summer-camp-24.js.br  slides-jug-summer-camp-24_bg.wasm  slides-jug-summer-camp-24_bg.wasm.br
assets/prismjs/: prism.css
assets/xtermjs/: addon-clipboard.js.br  addon-clipboard.js.map.br  addon-fit.js.br  addon-fit.js.map.br  addon-ligatures.js.br  addon-ligatures.js.map  addon-unicode11.js.br  xterm.js.br
prismjs/: prism.js
src/: components.rs  id.rs  index_print.html  keybindings.rs  lib.rs  main.rs
src/components/: browser.rs  code_block.rs  github_corner.rs  links.rs  live_code.rs  slide.rs  window.rs
src/pages/: live.rs  mod.rs
src/talk/: conclusion.rs  dioxus_wc.rs  mod.rs  (+3 more)
xtermjs/: addon-attach.js.br  addon-attach.js.map.br  addon-ligatures.js  addon-ligatures.js.map.br  addon-unicode11.js.map.br  addon-web-links.js.br  addon-web-links.js.map.br  xterm.css.br  xterm.js.map.br
(+23 files in other folders)
