[package]
name = "slides-jug-summer-camp-24"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
ulid = "1.1.3"

[dev-dependencies]
assert2 = "0.3.14"
rstest = "0.22.0"
snapbox = "0.6.17"
