[package]
name = "slides-jug-summer-camp-24"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

print = []


[dependencies]
derive_more = { version = "1.0.0", features = ["full"] }
dioxus = { version = "0.5.6", features = ["web", "router"] }
dioxus-web = "0.5.6"
dioxus-logger = "0.5.1"
futures = "0.3.30"
gloo = { version = "0.11.0", features = ["events"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
ulid = "1.1.3"
wasm-bindgen = { version = "0.2.93" }
web-sys = { version = "0.3.70", features = ["Document", "KeyboardEvent"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
